[package]
name = "saito-macros"
version = "0.1.0"
description = "Macros for Building Saito-Rust"
license-file = "LICENSE.md"
authors = [
  "Clayton Rabenda <claytonrabenda@gmail.com>"
  "Steven Zeiler <zeiler@saito.live>"
 ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
